Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2594

crash on opening a new document when context pane is open

XMLWordPrintable

    • 70c189e2bdfe5e76c583a3a5eeeaf8db8f0e046a

      Opening a new document when having the context pane opened triggers a crash:

      (gdb) bt
      #0  0x00007fffe4e45e60 in QmlJS::Document::qmlProgram() const ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #1  0x00007fffe4e6e8bb in QmlJS::Link::populateImportedTypes(QmlJS::Interpreter::TypeEnvironment*, QSharedPointer<QmlJS::Document>) ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #2  0x00007fffe4e6f511 in QmlJS::Link::linkImports() ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #3  0x00007fffe4e6fc41 in QmlJS::Link::Link(QmlJS::Interpreter::Context*, QSharedPointer<QmlJS::Document> const&, QmlJS::Snapshot const&, QStringList const&) ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #4  0x00007fffe4e77160 in ?? ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #5  0x00007fffe4e7675a in QmlJS::LookupContext::LookupContext(QSharedPointer<QmlJS::Document>, QmlJS::Snapshot const&, QList<QmlJS::AST::Node*> const&) ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #6  0x00007fffe4e76cca in QmlJS::LookupContext::create(QSharedPointer<QmlJS::Document>, QmlJS::Snapshot const&, QList<QmlJS::AST::Node*> const&) ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
      #7  0x00007fffe510d7c6 in QmlJSEditor::Internal::SemanticInfo::lookupContext(QList<QmlJS::AST::Node*> const&) const ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/libQmlJSEditor.so
      #8  0x00007fffe510d99a in QmlJSEditor::Internal::QmlJSTextEditor::hideContextPane() ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/libQmlJSEditor.so
      #9  0x00007ffff6e59021 in QWidget::event(QEvent*) ()
         from /home/kamm/qtcreator-2.0.91/bin/../lib/libQtGui.so.4
      #10 0x00007ffff725a96b in QFrame::event(QEvent*) ()
         from /home/kamm/qtcreator-2.0.91/bin/../lib/libQtGui.so.4
      #11 0x00007ffff72ea2d7 in QAbstractScrollArea::viewportEvent(QEvent*) ()
         from /home/kamm/qtcreator-2.0.91/bin/../lib/libQtGui.so.4
      #12 0x00007fffed8a035d in TextEditor::BaseTextEditor::viewportEvent(QEvent*) ()
         from /home/kamm/qtcreator-2.0.91/lib/qtcreator/plugins/Nokia/libTextEditor.so
      #13 0x00007ffff72ec2b8 in ?? ()
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ckamm Christian Kamm
            ckamm Christian Kamm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes