QmlJS: Fix instances of using lookupContext() on invalid info.

Task-number: QTCREATORBUG-2594
Done-with: Thomas Hartmann